--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+  <script
+    src="https://kit.fontawesome.com/8822b638ae.js"
+      crossorigin="anonymous"
+    >
+  </script>
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -30,6 +35,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
